--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,8 @@ version: '3.8'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
-    environment:
-      - 'ZOOKEEPER_CLIENT_PORT=2181'
-      - 'ZOOKEEPER_TICK_TIME=2000'
+    env_file:
+      - zoo.env
     networks:
       - wallet
 
@@ -14,22 +13,15 @@ services:
       - zookeeper
     ports:
       - "9092:9092"
-    environment:
-      - 'KAFKA_BROKER_ID=1'
-      - 'KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181'
-      - 'KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092'
-      - 'KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT'
-      - 'KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT'
-      - 'KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1'
+    env_file:
+      - kafka.env
     networks:
       - wallet
 
   postgres:
     image: postgres:latest
-    environment:
-      - 'POSTGRES_DB=walletdb'
-      - 'POSTGRES_USER=user'
-      - 'POSTGRES_PASSWORD=password'
+    env_file:
+      - postgres.env
     ports:
       - "5432:5432"
     networks:
@@ -44,11 +36,8 @@ services:
       - postgres
     ports:
       - "8080:8080"
-    environment:
-      - 'SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/walletdb'
-      - 'SPRING_DATASOURCE_USERNAME=user'
-      - 'SPRING_DATASOURCE_PASSWORD=password'
-      - 'SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:9092'
+    env_file:
+      - app.env
     networks:
       - wallet
 
