--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,20 @@ services:
     networks:
       - wallet
 
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    networks:
+      - wallet
+
   app:
     build:
       context: .
       dockerfile: DockerFile
     depends_on:
       - postgres
+      - redis
     ports:
       - "8080:8080"
     env_file:
