--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,16 +9,14 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-  kafka:
-    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS}
-    consumer:
-      properties:
-        max.poll.interval.ms: 60000
-      producer:
-        retries: 3
   liquibase:
     enabled: true
     change-log: classpath:db/master.xml
+
+  spring:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
 
 logging:
   level:
